--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,26 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+#include<stdio.h>
+int palindrome(int n)
+{
+    int rev=0,num=0;
+    while(n>0)
+    {
+        num=n%10;
+        rev=rev*10+num;
+        n=n/10;
+    }
+    return rev;
+}
+int main()
+{
+    int n;
+    printf("Enter a number:");
+    scanf("%d",&n);
+    int rev=palindrome(n);
+    if(n==rev)
+    {
+        printf("The given number is a Palindrome.");
+    }
+    else
+        printf("The given number is not a Palindrome.");
+    return 0;
+}
